Add city search endpoints by name
