# swagger.json
@@ -2,8 +2,8 @@
   "swagger": "2.0",
   "info": {
     "title": "Orders API",
-    "version": "1.0.0",
-    "description": "API Documentation for Orders"
+    "version": "1.1.0",
+    "description": "Origination API Documentation"
   },
   "host": "origination-api-692b721ce1ef.herokuapp.com",
   "basePath": "/",
@@ -35,7 +35,7 @@
     "/new-orders": {
       "post": {
         "summary": "Create a new order",
-        "description": "Endpoint to create a new order in the database. The 'date' property will be automatically set to the current date and time by the server.",
+        "description": "Endpoint to create a new order in the database - MongoDB. The 'date' property will be automatically set to the current date and time by the server.",
         "parameters": [
           {
             "name": "order",
@@ -53,6 +53,55 @@
           },
           "400": {
             "description": "Invalid request"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      }
+    },
+    "/cities": {
+      "get": {
+        "summary": "Retrieve all cities",
+        "description": "Endpoint to retrieve all cities from the database.",
+        "responses": {
+          "200": {
+            "description": "Successfully retrieved cities",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/City"
+              }
+            }
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      }
+    },
+    "/cities/search": {
+      "get": {
+        "summary": "Search cities by name",
+        "description": "Endpoint to search cities by name.",
+        "parameters": [
+          {
+            "name": "name",
+            "in": "query",
+            "description": "Name to search for",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successfully retrieved cities",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/City"
+              }
+            }
           },
           "500": {
             "description": "Internal server error"
@@ -113,6 +162,54 @@
         "type": {
           "type": "string",
           "description": "Type of the order"
+        }
+      }
+    },
+    "City": {
+      "type": "object",
+      "required": [
+        "id",
+        "name",
+        "state_id",
+        "latitude",
+        "longitude",
+        "ibge_code",
+        "cod_tom"
+      ],
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int32",
+          "description": "ID of the city"
+        },
+        "name": {
+          "type": "string",
+          "description": "Name of the city"
+        },
+        "state_id": {
+          "type": "integer",
+          "format": "int32",
+          "description": "ID of the state the city belongs to"
+        },
+        "latitude": {
+          "type": "number",
+          "format": "double",
+          "description": "Latitude of the city"
+        },
+        "longitude": {
+          "type": "number",
+          "format": "double",
+          "description": "Longitude of the city"
+        },
+        "ibge_code": {
+          "type": "integer",
+          "format": "int32",
+          "description": "IBGE code of the city"
+        },
+        "cod_tom": {
+          "type": "integer",
+          "format": "int32",
+          "description": "COD TOM of the city"
         }
       }
     }
